--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=your_password
-DB_NAME=home_automation
+DB_PASS=321654Mmm
+DB_NAME=homeautomationsustainabilitydb
 PORT=3000
