--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.7",
+    "body": "^5.1.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -8,6 +9,7 @@
     "express": "^4.21.1",
     "express-ejs-layouts": "^2.5.1",
     "mysql2": "^3.11.4",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "parsar": "^1.0.0"
   }
 }
