--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=321654Mmm
-DB_NAME=homeautomationsustainabilitydb
+DB_NAME=senior
 PORT=3000
 OPENAI_API_KEY=
 
